--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.1.5"
 djangorestframework = "^3.15.2"
-pymongo = "^4.10.1"
+pymongo = {extras = ["gssapi", "snappy", "srv", "tls"], version = "^4.10.1"}
 django-mongodb-engine = { git = "https://github.com/django-nonrel/mongodb-engine" }
 ruff = "^0.9.2"
 loguru = "^0.7.3"
+mongoengine = "^0.29.1"
+django-environ = "^0.12.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
