--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ruff = "^0.9.2"
 loguru = "^0.7.3"
 mongoengine = "^0.29.1"
 django-environ = "^0.12.0"
+django-rest-framework-mongoengine = "^3.4.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
