--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ loguru = "^0.7.3"
 mongoengine = "^0.29.1"
 django-environ = "^0.12.0"
 django-rest-framework-mongoengine = "^3.4.1"
+django-cors-headers = "^4.6.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
