--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-django = "^5.1.5"
+django = "4.2"
 djangorestframework = "^3.15.2"
 pymongo = {extras = ["gssapi", "snappy", "srv", "tls"], version = "^4.10.1"}
 django-mongodb-engine = { git = "https://github.com/django-nonrel/mongodb-engine" }
@@ -18,6 +18,7 @@ django-environ = "^0.12.0"
 django-rest-framework-mongoengine = "^3.4.1"
 django-cors-headers = "^4.6.0"
 black = "^24.10.0"
+djangorestframework-simplejwt-mongoengine = "^1.3.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
