--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ django-rest-framework-mongoengine = "^3.4.1"
 django-cors-headers = "^4.6.0"
 black = "^24.10.0"
 djangorestframework-simplejwt-mongoengine = "^1.3.0"
+drf-yasg = "^1.21.8"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
